Fix long titles in status page
The refresh metadata button added too much width to the button container, so this keesp the title from pushing them down a row.

--- a/static/css/movie_status_popup.css
+++ b/static/css/movie_status_popup.css
@@ -28,7 +28,8 @@ div#title span#title{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 80%;
+    display: inline-block;
+    max-width: 78%;
 }
 
 div#title span#year{
